# flo

./: .env.local.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
Casks/: flo.rb
apps/windows/: Cargo.toml  README.md
apps/windows/crates/flo-app/: Cargo.toml
apps/windows/crates/flo-app/src/: acceptance.rs  main.rs  runtime.rs  services.rs
apps/windows/crates/flo-core/: Cargo.toml
apps/windows/crates/flo-core/src/: capabilities.rs  controller.rs  lib.rs  ports.rs
apps/windows/crates/flo-core/tests/: error_parity.rs
apps/windows/crates/flo-domain/: Cargo.toml
apps/windows/crates/flo-domain/src/: keys.rs  lib.rs  types.rs
apps/windows/crates/flo-platform-win/: Cargo.toml
apps/windows/crates/flo-platform-win/src/: adapters.rs  audio.rs  elevation.rs  history.rs  hotkeys.rs  injection.rs  lib.rs  prefs.rs  security.rs  selection.rs  update.rs
apps/windows/crates/flo-provider/: Cargo.toml
apps/windows/crates/flo-provider/src/: config.rs  lib.rs  oauth.rs  routing.rs
apps/windows/crates/flo-provider/tests/: p2_parity.rs
apps/windows/crates/flo-ui-win32/: Cargo.toml
apps/windows/crates/flo-ui-win32/src/: lib.rs  shell.rs
apps/windows/docs/: 01-parity-matrix.md  02-feature-contracts.md  03-acceptance-tests.md  04-controller-action-ledger.md  05-ui-parity-spec.md  06-error-message-parity.md  07-release-readiness-checklist.md  08-soak-report-template.md  architecture.md  parity-tracker.md  risk-register.md
apps/windows/docs/status/: soak-latest.md  week-00.md
apps/windows/scripts/: package-zip.sh  prepare-msix-winget.sh  release-readiness.sh  run-soak-matrix.sh  verify-parity-gates.sh
docs/: homebrew-distribution.md  macos-permissions.md  release-checklist.md  repository-governance.md  rollback-and-rollout.md
plans/: 00-plan-orchestration.md  01-product-requirements.md  02-ux-interaction-spec.md  03-auth-gate-and-oauth-spec.md  04-audio-stt-pipeline-spec.md  05-selection-readaloud-spec.md  06-shortcut-and-input-monitoring-spec.md  07-accessibility-permissions-spec.md  08-text-injection-spec.md  09-security-privacy-data-retention.md  (+5 more)
(+80 files in other folders)
