[workspace]
members = [
  "crates/flo-domain",
  "crates/flo-core",
  "crates/flo-provider",
  "crates/flo-platform-win",
  "crates/flo-ui-win32",
  "crates/flo-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["flo maintainers"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = { version = "2", features = ["serde"] }
