[package]
name = "flo-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
flo-core = { path = "../flo-core" }
flo-domain = { path = "../flo-domain" }
flo-platform-win = { path = "../flo-platform-win" }
flo-provider = { path = "../flo-provider" }
